--- a/ede.cabal
+++ b/ede.cabal
@@ -68,27 +68,28 @@ library
     ghc-options:       -Wall
 
     build-depends:
-          aeson                >= 0.7
-        , ansi-wl-pprint       >= 0.6.6
-        , base                 >= 4.6   && < 5
-        , bifunctors           >= 4
-        , bytestring           >= 0.9
-        , comonad              >= 4.2
-        , directory            >= 1.2
-        , double-conversion    >= 2.0.2
-        , filepath             >= 1.2
-        , free                 >= 4.8
-        , lens                 >= 4.0
-        , mtl                  >= 2.1.3.1
-        , parsers              >= 0.12.1.1
-        , scientific           >= 0.3.1
-        , semigroups           >= 0.15
-        , text                 >= 1.2
-        , text-format          >= 0.3
-        , text-manipulate      >= 0.1.2
-        , trifecta             >= 1.6
-        , unordered-containers >= 0.2.3
-        , vector               >= 0.7.1
+          aeson                       >= 0.7
+        , base                        >= 4.6   && < 5
+        , bifunctors                  >= 4
+        , bytestring                  >= 0.9
+        , comonad                     >= 4.2
+        , directory                   >= 1.2
+        , double-conversion           >= 2.0.2
+        , filepath                    >= 1.2
+        , free                        >= 4.8
+        , lens                        >= 4.0
+        , mtl                         >= 2.1.3.1
+        , parsers                     >= 0.12.1.1
+        , prettyprinter               >= 1.2
+        , prettyprinter-ansi-terminal >= 1.1
+        , scientific                  >= 0.3.1
+        , semigroups                  >= 0.15
+        , text                        >= 1.2
+        , text-format                 >= 0.3
+        , text-manipulate             >= 0.1.2
+        , trifecta                    >= 2.1
+        , unordered-containers        >= 0.2.3
+        , vector                      >= 0.7.1
 
 test-suite golden
     default-language:  Haskell2010
